kubernetes/booking-service-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: doku96522/booking-service:latest
        ports:
        - containerPort: 3000
