kubernetes/hotel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hotel
  template:
    metadata:
      labels:
        app: hotel
    spec:
      containers:
      - name: hotel
        image: doku96522/hotel-service:latest
        ports:
        - containerPort: 3000
