kubernetes/rating-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: doku96522/rating-service:latest
        ports:
        - containerPort: 3000
