kubernetes/hotel-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  selector:
    app: hotel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
