kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 80
      - path: /bookings
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
      - path: /hotels
        pathType: Prefix
        backend:
          service:
            name: hotel-service
            port:
              number: 80
      - path: /ratings
        pathType: Prefix
        backend:
          service:
            name: rating-service
            port:
              number: 80
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
